--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "ethlint": "^1.2.5",
+    "hardhat": "../hardhat/packages/hardhat-core/hardhat-v2.6.2.tgz",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.57",
